runtime/grammars/sources/gotmpl/test/corpus/text.txt
====================================
Valid curly brackets combination inside text block
====================================
{{ if condition }}
    }}
    {}
    }{
    }
    {
    }}}
{{ end }}
---
(source_file
    (template
        (if_action
            (function_call (identifier))
            (text)
            (text)
            (text)
            (text)
            (text)
            (text)
            (text))))

====================================
Invalid curly brackets combination inside text block
====================================
{{ if condition }}
    {{
{{ end }}
---
(source_file
    (template
        (if_action
            (function_call (identifier))
            (text)
            (ERROR))))
